sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: not found: value PlusPetit
      if (PlusPetit(j+1,j))
          ^