sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var n = getValueCount();
	
  for(i <- n-1 to 1 by -1){
    for(j<-0 to i){
      if (PlusPetit(j+1,j))
      {
        echange(j,j+1)
      }
      
    }
  }
  
  
}